# ParaSpline

./: CMakeLists.txt
CMakeConfig/: building_output.cmake
data/: CoefficientResult.txt  Plot.m
include/: ParametricSpline.hpp
lib/: CMakeLists.txt  ParametricSpline.cpp  ParametricSpline.hpp
src/: CMakeLists.txt  ParametricSpline.cpp  a.out  test  test.cpp
